# smmarks-connector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/smmarks_connector/: __init__.py  base.py  client.py  logger.py
src/smmarks_connector/auth/: __init__.py  base.py  strategy.py
src/smmarks_connector/models/: __init__.py  base.py  classes.py  markbooks.py  outcomes.py  responses.py  results.py  students.py  tasks.py  users.py  utils.py
tests/: test_client.py  test_logger.py  test_models.py
