[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smmarks-connector"
version = "0.1.0"
description = "A Python client library for the SM Marks (Markbook Online) API."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Hayden Foxwell" },
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
]

[project.urls]
Homepage   = "https://github.com/FoxClock/smmarks-connector"
Repository = "https://github.com/FoxClock/smmarks-connector"
Issues     = "https://github.com/FoxClock/smmarks-connector/issues"
Changelog  = "https://github.com/FoxClock/smmarks-connector/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatchling — tell the build backend where the package lives
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/smmarks_connector"]

# ---------------------------------------------------------------------------
# UV — development dependency group (PEP 735 / uv native)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

# ---------------------------------------------------------------------------
# Ruff — linting & formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["smmarks_connector"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["src"]
addopts    = "-v --cov=smmarks_connector --cov-report=term-missing"
